// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoRmp's land destination action: all fields 1`] = `
Object {
  "channel_type": "ziisL0MJUd6S",
  "device": Object {
    "advertising_id": "ziisL0MJUd6S",
    "ip": "ziisL0MJUd6S",
    "language": "ziisL0MJUd6S",
    "model": "ziisL0MJUd6S",
    "os": "ZIISL0MJUD6S",
    "os_version": "ziisL0MJUd6S",
    "ua": "ziisL0MJUd6S",
    "unique_device_id": "ziisL0MJUd6S",
  },
  "event_type": "LAND",
  "id": "ziisL0MJUd6S",
  "items": Array [
    Object {
      "id": "ziisL0MJUd6S",
      "price": Object {
        "amount": -7208881776230.4,
        "currency": "CAD",
      },
      "quantity": -720888177623040,
      "seller_id": "ziisL0MJUd6S",
    },
  ],
  "page_id": "ziisL0MJUd6S",
  "referrer_page_id": "ziisL0MJUd6S",
  "session_id": "ziisL0MJUd6S",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "ziisL0MJUd6S",
}
`;

exports[`Testing snapshot for MolocoRmp's land destination action: required fields 1`] = `
Object {
  "channel_type": "ziisL0MJUd6S",
  "event_type": "LAND",
  "id": "ziisL0MJUd6S",
  "page_id": "ziisL0MJUd6S",
  "referrer_page_id": "ziisL0MJUd6S",
  "session_id": "ziisL0MJUd6S",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "ziisL0MJUd6S",
}
`;
